# server/src/api/routes/incidents.js
@@ -3,7 +3,7 @@ const incidentRouter = express.Router();
 var incidentsCon = require('../controllers/incident')
 
 incidentRouter.post('/createIncident', incidentsCon.createIncident);
-incidentRouter.get('/getIncidents', incidentsCon.getIncidents);
+incidentRouter.post('/getIncidents', incidentsCon.getIncidents);
 incidentRouter.post('/getIncidentsById', incidentsCon.getIncidentsById);
 incidentRouter.post('/getIncidentsByAsigneeId', incidentsCon.getIncidentByAsigneeId);
 incidentRouter.post('/getIncidentsByCreatorId', incidentsCon.getIncidentByCreatorId);
